# EZ-CorridorKey-AMD-FIX

./: .gitignore  1-install.bat  1-install.sh  3-update.bat  3-update.sh  CHANGELOG.md  CorridorKey_local.bat  CorridorKey_local.sh  CorridorKey_remote.bat  Install_CorridorKey_Windows.bat  Install_GVM_Windows.bat  Install_VideoMaMa_Windows.bat  README.md  corridorkey.spec  install.bat  install.sh  main.py  pyproject.toml  requirements.txt  start.bat  start.sh  tasks.md  update.bat  update.sh
.github/workflows/: azure-gpu-installer-smoke.yml  fresh-install-smoke.yml  local-gpu-qa.yml  upgrade-smoke.yml
CorridorKeyModule/: backend.py  inference_engine.py  inference_engine_amd.py
CorridorKeyModule/core/: color_utils.py  model_transformer.py
backend/: annotation_prompts.py  clip_state.py  ffmpeg_tools.py  frame_io.py  job_queue.py  service.py
dev-docs/: COMMIT-LOG.md  TODO.md
dev-docs/research/technology/deep/: 2026-03-12-best-packaging-and-installer-solutions-for-python.md  2026-03-12-fp16-persistent-weights-modelhalf-vs-fp32-weights.md  (+4 more)
docker/: .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  supervisord.conf
gvm_core/: wrapper.py
gvm_core/gvm/pipelines/: pipeline_gvm.py
modules/MatAnyone2Module/matanyone2/: __init__.py
sam2_tracker/: wrapper.py
scripts/: bench_parallel_frames.py  ci_smoke.py  detect_windows_torch_index.py  open_installer_issue.py  sam2_smoke.py  setup_models.py  verify_torch_runtime.py
scripts/azure/: cloud_gpu_installer_smoke.sh
tests/: test_annotation_prompts.py  test_backend_output_contract.py  test_dialog_sizes.py  test_frame_io.py  test_gpu_monitor.py  test_invalid_format.py  test_job_queue_phase4.py  test_main_window_color_space.py  test_output_config.py  test_parameter_panel.py  test_sam2_wrapper.py  test_service.py  test_service_videomama_contract.py  test_split_view.py  test_status_bar.py  test_verify_torch_runtime.py  test_windows_cuda_detect.py
ui/: app.py  main_window.py  shortcut_registry.py
ui/preview/: display_transform.py  frame_index.py
ui/sounds/: audio_manager.py
ui/theme/: corridor_theme.qss
ui/widgets/: annotation_overlay.py  clip_browser.py  debug_console.py  diagnostic_dialog.py  dual_viewer.py  frame_scrubber.py  io_tray_panel.py  parameter_panel.py  preferences_dialog.py  preview_viewport.py  queue_panel.py  recent_projects_panel.py  report_issue_dialog.py  split_view.py  status_bar.py  view_mode_bar.py  welcome_screen.py
ui/workers/: extract_worker.py  gpu_job_worker.py  gpu_monitor.py
(+17 files in other folders)
