[project]
name = "corridorkey"
version = "0.1.0"
description = "AI Green Screen Keyer by Corridor Digital"
license = {text = "CC-BY-NC-SA-4.0"}
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "torch>=2.9.1",
    "torchvision",
    "numpy",
    "opencv-python-headless",
    "timm==1.0.24",
    "av",
    "diffusers",
    "easydict",
    "einops",
    "imageio",
    "peft",
    "Pillow",
    "PIMS",
    "setuptools",
    "tqdm",
    "accelerate",
    "transformers",
    "matplotlib",
    "pynvml",
    "PySide6>=6.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "ui", "CorridorKeyModule", "gvm_core", "VideoMaMaInferenceModule"]

[tool.uv]
torch-backend = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
